<resources>
    <!-- Name of the project. -->
    <string name="app_name">InventoryApp2</string>

    <!-- Title of the main activity. -->
    <string name="main_activity_title">Inventory Store v2.0</string>

    <!-- Drop down menu options for the MainActivity. -->
    <string name="insert_dummy_product">Insert Dummy Product</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="exit_app">Exit App</string>

    <!-- Text that tells that inserting has failed. -->
    <string name="error_insertion">Sorry, something went wrong.\nUnable to insert the provided data to database.</string>

    <!-- Text that tells that inserting has successfully carried out. -->
    <string name="successful_insertion">Data has inserted successfully.</string>

    <!-- Text that tells that has failed. -->
    <string name="error_deletion">Sorry, something went wrong.\nNothing deleted.</string>

    <!-- Text that tells that deletion has successfully carried out. -->
    <string name="successful_deletion">All data has successfully deleted.</string>

    <!-- Title text for the empty view, which describes the empty inventory [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here…</string>

    <!-- Subtitle text for the empty view that prompts the user to add an inventory [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <string name="title">Title</string>
    <string name="name_of_the_product">Name of the product?</string>
    <string name="price">Price</string>
    <string name="price_of_the_product">Price of the product?</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_of_the_product">Quantity of the product?</string>
    <string name="sold">Sold</string>
    <string name="product_sold">Product sold?</string>
    <string name="name">Name</string>
    <string name="name_of_the_supplier">Name of the supplier?</string>
    <string name="email">Email</string>
    <string name="email_of_the_supplier">Email of the supplier?</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_no_of_supplier">Mobile no. of supplier?</string>

    <string name="cd_product_image">Product image</string>

    <string name="delete" translatable="false">Delete</string>
    <string name="save">Save</string>
    <string name="dial">Dial</string>
    <string name="description">Description</string>
    <string name="add_new_product">Add New Product</string>
    <string name="edit_product_info">Edit Product Info</string>

    <string name="unsaved_changes_dialog_msg">You have unsaved information are you sure you want to go back?</string>
    <string name="discard">Discard and leave</string>
    <string name="keep_editing">Lets finish this</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="sell">Sell</string>
    <string name="product">Product_</string>
    <string name="supplier">Supplier_</string>
    <string name="abc_dot">abc.</string>
    <string name="at_email">\@email.com</string>

    <string name="error_find_number">No number found.</string>
    <string name="invalid_number">Invalid number.</string>
    <string name="sold_out">Sold all product out.</string>
</resources>
